# wgdomain

./: README.md  pyproject.toml
wgdomain/: __main__.py
wgdomain/commands/: __init__.py  exclude.py  include.py
wgdomain/commands/reset/: __init__.py  all.py  none.py
wgdomain/tools/: config.py  domain.py  ip_excluder.py  qr.py
wireguard-domain-manager/: __init__.py  __main__.py
wireguard-domain-manager/tools/: config.py
