[tool.poetry]
name = "wireguard-domain-manager"
version = "0.1.0"
description = "An application for managing domains and IPs in Wireguard, ensuring traffic routing only for selected addresses."
authors = ["Roman Poltorabatko <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
dnspython = "^2.4.2"
click-completion = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
