[tool.poetry]
name = "wgdomain"
version = "0.1.0"
description = "An application for managing domains and IPs in Wireguard, ensuring traffic routing only for selected addresses."
authors = ["Roman Poltorabatko <barabum@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
dnspython = "^2.4.2"
click-completion = "^0.5.2"
qrcode = "^7.4.2"

[tool.poetry.scripts]
wgdomain = "wgdomain.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
